[package]
version = "0.1.0"
edition = "2024"
license = "MIT"
name = "heart-rate"
description = "heart-rate"
repository = "https://github.com/ahaoboy/heart-rate"
homepage = "https://github.com/ahaoboy/heart-rate"
authors = ["ahaoboy"]

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
thiserror = "2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'